--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   flutter_svg: ^2.0.5
   rxdart: ^0.27.7
   provider: ^6.0.5
-  
+  shared_preferences: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
