--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.0
   flare_flutter: ^3.0.2
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
