--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.0
   flare_flutter: ^3.0.2
-  flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^14.0.0+1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
